Fix icon and temp alignment

--- a/src/App.css
+++ b/src/App.css
@@ -146,7 +146,7 @@ input::-webkit-calendar-picker-indicator {
 .Results__current-weather {
   display: flex;
   flex-wrap: wrap;
-  width: 30%;
+  width: 25%;
   margin: 2rem 2rem 0 0;
   padding: 1rem;
   background-color: #1980c4;
@@ -203,7 +203,7 @@ input::-webkit-calendar-picker-indicator {
 
 .Hourly-cards-section {
   /* margin-top: 5rem; */
-  width: 64%;
+  width: 70%;
 }
 
 .Hourly_cards {
@@ -219,9 +219,12 @@ input::-webkit-calendar-picker-indicator {
 }
 
 .weather__card {
+  display: flex;
   margin-top: 1.5rem;
   text-align: center;
   height: 9rem;
+  flex-direction: column;
+  align-items: center;
 }
 
 .card__time {
@@ -230,7 +233,7 @@ input::-webkit-calendar-picker-indicator {
 
 .Results__current-weather--temp {
   margin: 0;
-  width: calc(100% - 50px - 6rem);
+  width: calc(100% - 50px - 4.4rem);
   text-align: right;
   font-family: 'Oswald', sans-serif;
   font-size: 5rem;
@@ -260,6 +263,7 @@ input::-webkit-calendar-picker-indicator {
   width: 40%;
   font-size: 2rem;
   font-weight: 300;
+  text-align: right;
 }
 
 
